--- a/TMLGen/TMLGen.csproj
+++ b/TMLGen/TMLGen.csproj
@@ -47,4 +47,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call ..\prepare-release.bat $(Configuration) /o" />
+  </Target>
 </Project>
