--- a/TMLGen/App.config
+++ b/TMLGen/App.config
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TMLGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1"/>
     </startup>
+    <userSettings>
+        <TMLGen.Properties.Settings>
+            <setting name="UnpackedDataDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GameDataDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SourceFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GeneratedDialogTimelinesFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DialogsBinaryFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DialogsFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TimelineTemplatesDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Manual" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DoCopy" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparateAnimations" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ModIndex" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="BatchSourceDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ModeIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </TMLGen.Properties.Settings>
+    </userSettings>
 </configuration>
