Moved game data paths to separate form, readme update for batch

--- a/TMLGen/App.config
+++ b/TMLGen/App.config
@@ -49,6 +49,9 @@
             <setting name="ModeIndex" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="DidFirstLoad" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TMLGen.Properties.Settings>
     </userSettings>
 </configuration>
