--- a/TMLGen/Properties/Settings.settings
+++ b/TMLGen/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="ModeIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="DidFirstLoad" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
