--- a/TMLGen/App.config
+++ b/TMLGen/App.config
@@ -2,6 +2,8 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TMLGen.Properties.PathConfigurationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="TMLGen.Properties.PathConfiguration" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TMLGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,13 +11,23 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1"/>
     </startup>
     <userSettings>
-        <TMLGen.Properties.Settings>
+        <TMLGen.Properties.PathConfigurationSettings>
+            <setting name="DidFirstLoad" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="UnpackedDataDirectory" serializeAs="String">
                 <value />
             </setting>
             <setting name="GameDataDirectory" serializeAs="String">
                 <value />
             </setting>
+        </TMLGen.Properties.PathConfigurationSettings>
+        <TMLGen.Properties.PathConfiguration>
+            <setting name="pathTest" serializeAs="String">
+                <value>HELLLLLLLLLO THIS IS A VALUE</value>
+            </setting>
+        </TMLGen.Properties.PathConfiguration>
+        <TMLGen.Properties.Settings>
             <setting name="SourceFile" serializeAs="String">
                 <value />
             </setting>
@@ -49,8 +61,8 @@
             <setting name="ModeIndex" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="DidFirstLoad" serializeAs="String">
-                <value>False</value>
+            <setting name="SelectedMod" serializeAs="String">
+                <value />
             </setting>
         </TMLGen.Properties.Settings>
     </userSettings>
