added setting to skip location and material prompts

--- a/TMLGen/App.config
+++ b/TMLGen/App.config
@@ -64,6 +64,9 @@
             <setting name="SelectedMod" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SkipSelectionPrompt" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TMLGen.Properties.Settings>
     </userSettings>
 </configuration>
