--- a/TMLGen/App.config
+++ b/TMLGen/App.config
@@ -52,6 +52,11 @@
             <setting name="SeparateAnimations" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Mods" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+                </value>
+            </setting>
             <setting name="ModIndex" serializeAs="String">
                 <value>-1</value>
             </setting>
