--- a/TMLGen/Properties/Settings.settings
+++ b/TMLGen/Properties/Settings.settings
@@ -27,7 +27,8 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Mods" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" /&gt;</Value>
     </Setting>
     <Setting Name="ModIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">-1</Value>
