added option to skip show armor component

--- a/TMLGen/App.config
+++ b/TMLGen/App.config
@@ -72,6 +72,9 @@
             <setting name="SkipSelectionPrompt" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SkipShowArmor" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TMLGen.Properties.Settings>
     </userSettings>
 </configuration>
