--- a/TMLGen/Properties/Settings.settings
+++ b/TMLGen/Properties/Settings.settings
@@ -45,5 +45,8 @@
     <Setting Name="SkipSelectionPrompt" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SkipShowArmor" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
